--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,12 +8,14 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+packaging==24.1
 pytz==2024.2
 six==1.16.0
 SQLAlchemy==2.0.35
