--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,19 @@
-alembic==1.13.3
-aniso8601==9.0.1
 blinker==1.8.2
+cached-property==1.5.2
 click==8.1.7
 Flask==3.0.3
-Flask-Cors==5.0.0
-Flask-Migrate==4.0.7
-Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
-gunicorn==23.0.0
 importlib_metadata==8.5.0
-importlib_resources==6.4.5
+inflection==0.5.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
-Mako==1.3.5
 MarkupSafe==2.1.5
-packaging==24.1
-pytz==2024.2
-six==1.16.0
+mypy-extensions==1.0.0
+psycopg2-binary==2.9.9
 SQLAlchemy==2.0.35
+sqlalchemy-orm==1.2.10
+typing-inspect==0.9.0
 typing_extensions==4.12.2
 Werkzeug==3.0.4
 zipp==3.20.2
