--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,12 +4,14 @@ click==8.1.7
 Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 importlib_metadata==8.5.0
 inflection==0.5.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
+packaging==24.1
 psycopg2-binary==2.9.9
 SQLAlchemy==2.0.35
 sqlalchemy-orm==1.2.10
