--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
+alembic==1.13.3
 blinker==1.8.2
 cached-property==1.5.2
 click==8.1.7
 Flask==3.0.3
+Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 gunicorn==23.0.0
@@ -9,10 +11,12 @@ importlib_metadata==8.5.0
 inflection==0.5.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.5
 MarkupSafe==2.1.5
 mypy-extensions==1.0.0
 packaging==24.1
 psycopg2-binary==2.9.9
+PyJWT==2.9.0
 SQLAlchemy==2.0.35
 sqlalchemy-orm==1.2.10
 typing-inspect==0.9.0
